# addRelease

./: Cargo.toml  README.md  dfx.json  did.txt  lib.txt  package-lock.json  package.json  tsconfig.json
src/addRelease_backend/: Cargo.toml  addRelease_backend.did
src/addRelease_backend/src/: lib.rs
src/addRelease_frontend/: index.html  package.json
src/addRelease_frontend/src/: App.jsx  InputField.jsx
