[package]
name = "addRelease_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.8"
digest = "0.9.0"